Fix/coverage issues (#11)